Social icons no longer wrap

--- a/source/stylesheets/refills/_footer-2.scss
+++ b/source/stylesheets/refills/_footer-2.scss
@@ -68,10 +68,13 @@
       }
 
       li {
+        float: left;
         font-size: 1em;
-        display: inline;
-        padding-right: .5em;
-        margin-bottom: .7em;      
+        padding-right: .7em;
+
+        &:last-child {
+          padding-right: 0;
+        }
       }
 
       img {
